{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 89,
  "lineage": "67ace113-ba31-a36f-9ee8-077134f7032f",
  "resources": [
    {
      "module": "module.lb.module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-24T07:27:32.090-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/teraform101/global/firewalls/nginx-http-lb-hc-0",
            "log_config": [],
            "name": "nginx-http-lb-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/teraform101/global/networks/teraform101-network-web",
            "priority": 1000,
            "project": "teraform101",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teraform101/global/firewalls/nginx-http-lb-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "nginx-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mig.google_compute_instance_group_manager.compute_manager_nginx",
            "module.mig.google_compute_instance_template.nginx-web-server",
            "module.vpc.google_compute_network.vpc_network_web",
            "module.vpc.google_compute_subnetwork.vpc_network_web_subnet_nginx"
          ]
        }
      ]
    },
    {
      "module": "module.lb.module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.49.110.65",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-24T07:26:32.771-07:00",
            "id": "projects/teraform101/global/addresses/nginx-http-lb-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "nginx-http-lb-address",
            "prefix_length": 0,
            "project": "teraform101",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teraform101/global/addresses/nginx-http-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.lb.module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.lb.module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_service_access_ip_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.118.41.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-03-19T08:26:22.624-07:00",
            "id": "projects/teraform101/global/addresses/private-service-access-ip-range",
            "name": "private-service-access-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/teraform101/global/networks/teraform101-network-web",
            "prefix_length": 24,
            "project": "teraform101",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teraform101/global/addresses/private-service-access-ip-range"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network_web"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/teraform101/global/networks/teraform101-network-web",
            "mtu": 0,
            "name": "teraform101-network-web",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "teraform101",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teraform101/global/networks/teraform101-network-web"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_network_web_subnet_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-24T07:26:33.585-07:00",
            "description": "A subnet that will host DB for Nginx",
            "gateway_address": "10.10.1.1",
            "id": "projects/teraform101/regions/europe-west2/subnetworks/db-subnet",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "db-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/teraform101/global/networks/teraform101-network-web",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "teraform101",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teraform101/regions/europe-west2/subnetworks/db-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network_web"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_network_web_subnet_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-24T07:26:33.584-07:00",
            "description": "A subnet that will host Nginx website VMs",
            "gateway_address": "10.10.0.1",
            "id": "projects/teraform101/regions/europe-west2/subnetworks/nginx-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "nginx-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/teraform101/global/networks/teraform101-network-web",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "teraform101",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teraform101/regions/europe-west2/subnetworks/nginx-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network_web"
          ]
        }
      ]
    }
  ]
}